tests-system/visibility-1/output
Foo.T {}
^^^ visibility-1/bar.trlc:3: error: package must be imported before use
Processed 1 model and 1 requirement file and found 1 error
